sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:11: error: '(' expected but identifier found.
    {if plusPetit(i+ecart,i)
        ^